update: swagger新增 權限測試設定
